empty view fixed.

--- a/MoviesWithFirebaseAnalytics/MoviesWithFirebaseAnalytics/Views/EmptyView/EmptyViewViewController.xib
+++ b/MoviesWithFirebaseAnalytics/MoviesWithFirebaseAnalytics/Views/EmptyView/EmptyViewViewController.xib
@@ -21,19 +21,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RJG-Yb-akp">
-                    <rect key="frame" x="75" y="309" width="243" height="100"/>
+                    <rect key="frame" x="146.66666666666666" y="376" width="100" height="100"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="asL-V6-Dep"/>
+                        <constraint firstAttribute="width" constant="100" id="KX6-85-MDa"/>
+                        <constraint firstAttribute="height" constant="100" id="glR-Wc-BBM"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="film yok" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="si0-bV-j9t">
-                    <rect key="frame" x="80" y="424" width="233" height="24"/>
+                    <rect key="frame" x="20" y="496" width="353" height="24"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="arama" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1En-YE-9op">
-                    <rect key="frame" x="80" y="463" width="233" height="20.333333333333314"/>
+                    <rect key="frame" x="20" y="540" width="353" height="20.333333333333371"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -42,16 +43,15 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="RJG-Yb-akp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="0lE-Fm-jjN"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1En-YE-9op" secondAttribute="trailing" constant="80" id="2Ak-fR-0se"/>
-                <constraint firstItem="si0-bV-j9t" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="80" id="8p2-uv-N09"/>
-                <constraint firstItem="RJG-Yb-akp" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="250" id="9GB-HG-zp0"/>
-                <constraint firstItem="1En-YE-9op" firstAttribute="top" secondItem="si0-bV-j9t" secondAttribute="bottom" constant="15" id="ATT-V3-Ps6"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1En-YE-9op" secondAttribute="bottom" constant="20" id="N3f-AV-aKD"/>
-                <constraint firstItem="1En-YE-9op" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="80" id="OW4-sR-dvK"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="RJG-Yb-akp" secondAttribute="trailing" constant="75" id="RR2-sq-dcU"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="si0-bV-j9t" secondAttribute="trailing" constant="80" id="WA1-Qn-zTe"/>
-                <constraint firstItem="si0-bV-j9t" firstAttribute="top" secondItem="RJG-Yb-akp" secondAttribute="bottom" constant="15" id="jmB-SQ-JX4"/>
+                <constraint firstItem="RJG-Yb-akp" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Bc6-l2-ZBh"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="si0-bV-j9t" secondAttribute="trailing" constant="20" id="DcV-Fr-Fql"/>
+                <constraint firstItem="si0-bV-j9t" firstAttribute="top" secondItem="RJG-Yb-akp" secondAttribute="bottom" constant="20" id="HPY-LR-EfG"/>
+                <constraint firstItem="RJG-Yb-akp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NtV-m2-gqH"/>
+                <constraint firstItem="si0-bV-j9t" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Nwb-aO-9bj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1En-YE-9op" secondAttribute="trailing" constant="20" id="X1R-sg-iI8"/>
+                <constraint firstItem="1En-YE-9op" firstAttribute="top" secondItem="si0-bV-j9t" secondAttribute="bottom" constant="20" id="j1Q-Fu-lF0"/>
+                <constraint firstItem="1En-YE-9op" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="th0-HL-6IA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1En-YE-9op" secondAttribute="bottom" constant="20" id="u7U-eV-bob"/>
             </constraints>
             <point key="canvasLocation" x="-25.190839694656489" y="19.718309859154932"/>
         </view>
