--- a/MoviesWithFirebaseAnalytics/MoviesWithFirebaseAnalytics/Views/EmptyView/EmptyViewViewController.xib
+++ b/MoviesWithFirebaseAnalytics/MoviesWithFirebaseAnalytics/Views/EmptyView/EmptyViewViewController.xib
@@ -17,24 +17,24 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" restorationIdentifier="EmptyViewViewController" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="793"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RJG-Yb-akp">
-                    <rect key="frame" x="146.66666666666666" y="376" width="100" height="100"/>
+                    <rect key="frame" x="146.66666666666666" y="346.66666666666669" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="KX6-85-MDa"/>
                         <constraint firstAttribute="height" constant="100" id="glR-Wc-BBM"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="film yok" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="si0-bV-j9t">
-                    <rect key="frame" x="20" y="496" width="353" height="24"/>
+                    <rect key="frame" x="20" y="466.66666666666669" width="353" height="24"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="arama" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1En-YE-9op">
-                    <rect key="frame" x="20" y="540" width="353" height="20.333333333333371"/>
+                    <rect key="frame" x="20" y="510.66666666666669" width="353" height="20.333333333333314"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -53,7 +53,8 @@
                 <constraint firstItem="1En-YE-9op" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="th0-HL-6IA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1En-YE-9op" secondAttribute="bottom" constant="20" id="u7U-eV-bob"/>
             </constraints>
-            <point key="canvasLocation" x="-25.190839694656489" y="19.718309859154932"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-26.717557251908396" y="69.366197183098592"/>
         </view>
     </objects>
     <resources>
